--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,39 +7,52 @@
 <header th:replace="fragments/navbar::nav"></header>
 <main>
 
-    <form class="welcome login" method="" action="/">
+    <form class="welcome login" th:method="post"
+          th:action="@{/register}"
+          th:object="${registerDTO}"  >
         <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Register</span></h1>
         <div class="form-group">
             <div class="label-holder textCol d-flex justify-content-center">
-                <label for="username" class="h4 mb-2 text-white">Username</label>
+                <label th:for="username" class="h4 mb-2 text-white">Username</label>
             </div>
 
-            <input type="text" class="form-control" id="username" name="username"/>
-            <small class="danger" style="font-size: 15px">Username error message</small>
+            <input type="text" class="form-control" id="username"
+                    th:field="*{username}"/>
+            <small th:if="${#fields.hasErrors('username')}"
+                   th:errors="*{username}"
+                    class="danger" style="font-size: 15px">Username error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
-                <label for="email" class="h4 mb-2">Email</label>
+                <label th:for="email" class="h4 mb-2">Email</label>
             </div>
-            <input type="email" class="form-control" id="email" name="email"/>
-            <small class="danger">Email error message</small>
+            <input type="email" class="form-control" id="email"
+                   th:field="*{email}"/>
+            <small th:if="${#fields.hasErrors('email')}"
+                   th:errors="*{email}"
+                    class="danger">Email error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
-                <label for="password" class="h4 mb-2">Password</label>
+                <label th:for="password" class="h4 mb-2">Password</label>
             </div>
-            <input type="password" class="form-control" id="password" name="password"/>
-            <small class="danger">Password error message</small>
+            <input type="password" class="form-control" id="password"
+                   th:field="*{password}"/>
+            <small th:if="${#fields.hasErrors('password')}"
+                   th:errors="*{password}"
+                   class="danger">Password error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="confirmPassword" class="h4 mb-2">Confirm Password</label>
             </div>
-            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"/>
-            <small class="danger">Password error message</small>
+            <input type="password" class="form-control" id="confirmPassword" th:field="*{confirmPassword}"/>
+            <small th:if="${#fields.hasErrors('confirmPassword')}"
+                   th:errors="*{confirmPassword}"
+                   class="danger">Password error message</small>
         </div>
 
         <div class="button-holder d-flex justify-content-center">
