--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,19 +20,12 @@
 
 <main>
         <span class="main-nav">
-            <ul class="main-nav">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">MEMBERSHIPS</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">SCHEDULE</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTACT US</a></li>
-            </ul>
+
         </span>
     <div class="main-container">
         <h2>NO PAIN NO GAIN</h2>
         <p>Nice-looking body and powerful organism are interconnected and we can help you with both.</p>
-        <a class="button" href="#">GET STARTED</a>
+        <a class="button" href="/register">GET STARTED</a>
     </div>
 </main>
 
