--- a/src/main/resources/templates/login-error.html
+++ b/src/main/resources/templates/login-error.html
@@ -10,8 +10,9 @@
           th:method="post"
           th:action="@{/login}" >
 
-        <div class="danger">Error messages</div>
+
         <div class="danger">Incorrect username or password!</div>
+        <div class="danger">Please try again!</div>
 
         <div class="form-group">
             <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Login</span></h1>
