--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -54,7 +54,17 @@
                    th:errors="*{confirmPassword}"
                    class="danger">Password error message</small>
         </div>
-
+        <div class="form-group">
+            <div class="label-holder text-white textCol d-flex justify-content-center">
+                <label for="role" class="h4 mb-2">Role</label>
+            </div>
+            <select class="form-control" id="role" th:field="*{role}">
+                <option value="" disabled selected>Select your role</option>
+                <option th:value="COACH">Coach</option>
+                <option th:value="TRAINEE">Trainee</option>
+            </select>
+            <small th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="danger">Role error message</small>
+        </div>
         <div class="button-holder d-flex justify-content-center">
             <button type="submit" value="Register">Register</button>
         </div>
