Roles in front-end.

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -18,11 +18,15 @@
             <a href="/home">Fitness</a>
         </div>
         <div class="links">
-            <li sec:authorize="isAuthenticated()">
+
+            <li sec:authorize="isAuthenticated() and hasRole('TRAINEE')">
                 <a href="/">Coach</a>
             </li>
-            <li sec:authorize="isAuthenticated()">
+            <li sec:authorize="isAuthenticated() and hasRole('TRAINEE')">
                 <a href="/">Exercises</a>
+            </li>
+            <li sec:authorize="isAuthenticated() and hasRole('COACH')">
+                <a href="/">Add Exercise</a>
             </li>
             <li sec:authorize="!isAuthenticated()">
                 <a href="/login">Login</a>
