--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -59,7 +59,7 @@
                 <label for="role" class="h4 mb-2">Role</label>
             </div>
             <select class="form-control" id="role" th:field="*{role}">
-                <option value="" disabled selected>Select your role</option>
+                <option value="" >Select your role</option>
                 <option th:value="COACH">Coach</option>
                 <option th:value="TRAINEE">Trainee</option>
             </select>
