Add Exercise as coach

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,7 +38,7 @@
         <section class="tools">
             <img src="/images/multiple-users-silhouette.png" alt="asdas">
             <h6>Qualified Coaches</h6>
-            <p>Our coaches have years of experience in various types of fitness and sports.</p>
+            <p>Our coach have years of experience in various types of fitness and sports.</p>
         </section>
 
         <section class="tools">
@@ -55,25 +55,25 @@
     </div>
 </div>
 
-<div class="coaches">
+<div class="coach">
     <h3>Coaches</h3>
     <div class="divider"></div>
-    <div class="coaches-sections">
-        <section class="coaches-cards">
+    <div class="coach-sections">
+        <section class="coach-cards">
             <img src="/images/perkins.jpg" alt="">
             <h5 class="name">Pepa Perkins</h5>
             <h6>Fitness</h6>
             <p>Emily can teach you all peculiarities of fitness and aerobics in a group or individually.</p>
         </section>
 
-        <section class="coaches-cards">
+        <section class="coach-cards">
             <img src="/images/minela.jpg" alt="">
             <h5 class="name">Samantha Minela</h5>
             <h6>Yoga</h6>
             <p>Our leading yoga coach, Samantha will help you reach full harmony with your body.</p>
         </section>
 
-        <section class="coaches-cards">
+        <section class="coach-cards">
             <img src="/images/ortiz.jpg" alt="">
             <h5 class="name">Austin Ortiz</h5>
             <h6>Bodybuilding</h6>
