--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
         <section class="tools">
             <img src="/images/multiple-users-silhouette.png" alt="asdas">
             <h6>Qualified Coaches</h6>
-            <p>Our coaches have years of experience in various types of fitness and sports.</p>
+            <p>Our coach have years of experience in various types of fitness and sports.</p>
         </section>
 
         <section class="tools">
