--- a/src/main/resources/templates/exercise-add.html
+++ b/src/main/resources/templates/exercise-add.html
@@ -5,46 +5,58 @@
 <body>
 <header th:replace="fragments/navbar::nav"></header>
 <main>
-    <form class="welcome add-offer-form" method="" action="/">
+    <form class="welcome add-offer-form"
+          th:method="post"
+          th:action="@{/exercise-add}"
+          th:object="${exerciseAddBindingModel}">
         <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Add Exercise</span></h1>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="name" class="h4 mb-2">Exercise Name</label>
             </div>
-            <input type="text" class="form-control" id="name" name="name"/>
-            <small class="danger">Name error message</small>
+            <input type="text" class="form-control" id="name"
+                   th:field="*{name}"/>
+            <small th:if="${#fields.hasErrors('name')}"
+                   th:errors="*{name}" class="danger">Name error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="description" class="h4 mb-2">Description</label>
             </div>
-            <input type="text" class="form-control" id="description" name="description"/>
-            <small class="danger">description error message</small>
+            <input type="text" class="form-control" id="description"
+                   th:field="*{description}"/>
+            <small th:if="${#fields.hasErrors('description')}"
+                   th:errors="*{description}" class="danger">description error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="intensity" class="h4 mb-2">Intensity</label>
             </div>
-            <input type="range" class="form-control-range" id="intensity" name="intensity" min="1" max="10" value="5" oninput="this.nextElementSibling.value = this.value">
+            <input type="range" class="form-control-range" id="intensity"  min="1" max="10" value="5" oninput="this.nextElementSibling.value = this.value"
+                   th:field="*{intensity}">
             <output class="ml-2">5</output>
-            <small class="danger">intensity error message</small>
+            <small th:if="${#fields.hasErrors('intensity')}"
+                   th:errors="*{intensity}" class="danger">intensity error message</small>
         </div>
 
+        <!--
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="equipment" class="h4 mb-2">Equipment</label>
             </div>
-            <select class="browser-default custom-select" id="equipment" name="equipment">
-                <option>###</option>
-                <option></option>
+            <select class="browser-default custom-select" id="equipment"
+                    th:field="*{equipment}">
+                <option value="">None</option>
+                <option value="">1</option>
             </select>
 
-            <small class="danger">Style error message</small>
+            <small th:if="${#fields.hasErrors('equipment')}"
+                   th:errors="*{equipment}" class="danger"> error message</small>
         </div>
-
+-->
         <div class="button-holder d-flex justify-content-center">
             <button type="submit" class="btn btn-info  mb-3">Add Exercise</button>
         </div>
