--- a/src/main/resources/templates/equipment-add.html
+++ b/src/main/resources/templates/equipment-add.html
@@ -11,6 +11,10 @@
           th:object="${equipmentAddBindingModel}">
         <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Add Equipment</span></h1>
 
+        <div th:if="${hasErrors}">
+            <p th:text="${errorMessage}" style="color: red;"></p>
+        </div>
+
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="name" class="h4 mb-2">Equipment Name</label>
