--- a/src/main/resources/templates/exercise-add.html
+++ b/src/main/resources/templates/exercise-add.html
@@ -44,7 +44,7 @@
                    th:errors="*{intensity}" class="danger">intensity error message</small>
         </div>
 
-        <!--
+
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="equipment" class="h4 mb-2">Equipment</label>
@@ -52,13 +52,15 @@
             <select class="browser-default custom-select" id="equipment"
                     th:field="*{equipment}">
                 <option value="">None</option>
-                <option value="">1</option>
+                <option th:each="equipment : ${equipmentList}"
+                        th:value="${equipment.id}"
+                        th:text="${equipment.name}"></option>
             </select>
 
             <small th:if="${#fields.hasErrors('equipment')}"
                    th:errors="*{equipment}" class="danger"> error message</small>
         </div>
--->
+
         <div class="button-holder d-flex justify-content-center">
             <button type="submit" class="btn btn-info  mb-3">Add Exercise</button>
         </div>
