--- a/src/main/resources/templates/exercises-coach.html
+++ b/src/main/resources/templates/exercises-coach.html
@@ -6,10 +6,10 @@
 <main>
     <div class="container mt-1 mb-4">
         <div class="row">
-            <!-- User's Exercises -->
+
             <div class="col-6">
                 <div class="home-fields" style="height: 40vh; overflow: auto">
-                    <h3>My Exercises</h3>
+                    <h3 class="text-white">My Exercises</h3>
                     <table class="table table-striped table-dark">
                         <thead>
                         <tr>
@@ -17,7 +17,7 @@
                             <th>Name</th>
                             <th>Description</th>
                             <th>Intensity</th>
-                            <th>Remove</th>
+
                         </tr>
                         </thead>
                         <tbody>
@@ -26,17 +26,38 @@
                             <td th:text="${exercise.name}">Exercise Name</td>
                             <td th:text="${exercise.description}">Description</td>
                             <td th:text="${exercise.intensity}">Intensity</td>
-                            <td>
-                                <form th:method="post" th:action="">
-                                    <button type="submit" class="btn btn-danger">Remove</button>
-                                </form>
-                            </td>
+
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
 
+            <div class="col-6">
+                <div class="home-fields" style="height: 40vh; overflow: auto">
+                    <h3 class="text-white">Other Exercises</h3>
+                    <table class="table table-striped table-dark">
+                        <thead>
+                        <tr>
+                            <th>Image</th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Intensity</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="exercise : ${otherExercises}">
+                            <td><img th:src="${exercise.photoUrl}" th:alt="${exercise.name}" width="35" height="35"></td>
+                            <td th:text="${exercise.name}">Exercise Name</td>
+                            <td th:text="${exercise.description}">Description</td>
+                            <td th:text="${exercise.intensity}">Intensity</td>
+
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 
         </div>
     </div>
