--- a/src/main/resources/templates/exercises-coach.html
+++ b/src/main/resources/templates/exercises-coach.html
@@ -18,6 +18,7 @@
                             <th>Description</th>
                             <th>Intensity</th>
                             <th>Remove</th>
+                            <th>Preview</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -29,6 +30,11 @@
                             <td>
                                 <form th:method="delete" th:action="@{/exercise/delete/{id}(id=${exercise.id})}">
                                     <button type="submit" class="btn btn-danger">Remove</button>
+                                </form>
+                            </td>
+                            <td>
+                                <form th:method="get" th:action="@{/exercise/preview/{id}(id=${exercise.id})}">
+                                    <button type="submit" class="btn btn-danger">Preview</button>
                                 </form>
                             </td>
                         </tr>
@@ -47,7 +53,7 @@
                             <th>Name</th>
                             <th>Description</th>
                             <th>Intensity</th>
-
+                            <th>Preview</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -57,6 +63,11 @@
                             <td th:text="${exercise.description}">Description</td>
                             <td th:text="${exercise.intensity}">Intensity</td>
 
+                            <td>
+                                <form th:method="get" th:action="@{/exercise/preview/{id}(id=${exercise.id})}">
+                                    <button type="submit" class="btn btn-danger">Preview</button>
+                                </form>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
