Coaches view from trainees

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -20,7 +20,7 @@
         <div class="links">
 
             <li sec:authorize="isAuthenticated() and hasRole('TRAINEE')">
-                <a href="/">Coach</a>
+                <a href="/trainee-coaches">Coach</a>
             </li>
             <li sec:authorize="isAuthenticated() and hasRole('TRAINEE')">
                 <a href="/">Exercises</a>
