--- a/src/main/resources/templates/trainee-coaches.html
+++ b/src/main/resources/templates/trainee-coaches.html
@@ -17,6 +17,9 @@
                         <h5 class="card-title" th:text="${coach.username}">Coach Name</h5>
                         <h6 class="card-subtitle mb-2 text-muted" th:text="${coach.specialty}">Specialty</h6>
                         <p class="card-text" th:text="${coach.bio}">Brief biography of the coach.</p>
+                            <form th:method="get" th:action="@{/coach/preview/{id}(id=${coach.id})}">
+                                <button type="submit" class="btn btn-danger">Preview</button>
+                            </form>
                     </div>
                 </div>
             </div>
