--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,38 +15,52 @@
 <header>
     <nav>
         <div class="home">
-            <a href="/home">Fitness</a>
+            <a href="/home" th:text="#{nav_bar_home}">Fitness</a>
         </div>
         <div class="links">
 
             <li sec:authorize="isAuthenticated() and hasRole('TRAINEE')">
-                <a href="/trainee-coaches">Coach</a>
+                <a href="/trainee-coaches" th:text="#{nav_bar_coach}">Coach</a>
             </li>
             <li sec:authorize="isAuthenticated() and hasRole('TRAINEE')">
-                <a href="/">Exercises</a>
+                <a href="/" th:text="#{nav_bar_exercises}">Exercises</a>
             </li>
             <li sec:authorize="isAuthenticated() and hasRole('COACH')">
-                <a href="/exercises-coach">Exercises</a>
+                <a href="/exercises-coach" th:text="#{nav_bar_exercises}">Exercises</a>
             </li>
             <li sec:authorize="isAuthenticated() and hasRole('COACH')">
-                <a href="/exercise-add">Add Exercise</a>
+                <a href="/exercise-add" th:text="#{nav_bar_exercise_add}">Add Exercise</a>
             </li>
             <li sec:authorize="isAuthenticated() and hasRole('COACH')">
-                <a href="/equipment-add">Add Equipment</a>
+                <a href="/equipment-add" th:text="#{nav_bar_equipment_add}">Add Equipment</a>
             </li>
             <li sec:authorize="!isAuthenticated()">
-                <a href="/login">Login</a>
+                <a href="/login" th:text="#{nav_bar_login}">Login</a>
             </li>
 
             <li sec:authorize="!isAuthenticated()">
-                <a href="/register">Register</a>
+                <a href="/register" th:text="#{nav_bar_register}">Register</a>
             </li>
 
             <form th:method="post"
                   th:action="@{/logout}"
                   sec:authorize="isAuthenticated()">
-                <input class="btn btn-link" type="submit" value="Logout"/>
+                <input class="btn btn-link" type="submit"  th:value="#{nav_bar_logout}"/>
             </form>
+
+            <li class="nav-item">
+                <form th:method="get">
+                    <label class="text-white" for="lang" th:text="#{nav_bar_language}">Language</label>
+                    <select
+                            id="lang"
+                            name="lang"
+                            onchange="this.form.submit()">
+                        <option value="en_US" th:selected="${#locale.toString()} == 'en_US'">English</option>
+                        <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">Български</option>
+                    </select>
+                </form>
+
+            </li>
         </div>
     </nav>
 </header>
