--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -34,6 +34,9 @@
             <li sec:authorize="isAuthenticated() and hasRole('COACH')">
                 <a href="/equipment-add" th:text="#{nav_bar_equipment_add}">Add Equipment</a>
             </li>
+            <li sec:authorize="isAuthenticated() ">
+                <a href="/supplement-add" >Add Supplement</a>
+            </li>
             <li sec:authorize="!isAuthenticated()">
                 <a href="/login" th:text="#{nav_bar_login}">Login</a>
             </li>
