--- a/src/main/resources/templates/equipment-add.html
+++ b/src/main/resources/templates/equipment-add.html
@@ -27,7 +27,7 @@
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
-                <label for="photoUrl" class="h4 mb-2">Photo photoUrl</label>
+                <label for="photoUrl" class="h4 mb-2">Photo</label>
             </div>
             <input type="text" class="form-control" id="photoUrl"
                    th:field="*{photoUrl}"/>
