--- a/src/main/resources/templates/exercise-add.html
+++ b/src/main/resources/templates/exercise-add.html
@@ -37,16 +37,16 @@
             </div>
             <input type="range" class="form-control-range"
                    id="intensity"
-                   min="1" max="10" value="5" oninput="this.nextElementSibling.value = this.value"
+                   min="1" max="10" value="0" oninput="this.nextElementSibling.value = this.value"
                    th:field="*{intensity}">
-            <output class="ml-2">5</output>
+            <output class="ml-2">0</output>
             <small th:if="${#fields.hasErrors('intensity')}"
                    th:errors="*{intensity}" class="danger">intensity error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
-                <label for="photoUrl" class="h4 mb-2">Photo photoUrl</label>
+                <label for="photoUrl" class="h4 mb-2">Photo</label>
             </div>
             <input type="text" class="form-control" id="photoUrl"
                    th:field="*{photoUrl}"/>
