--- a/src/main/resources/templates/supplement-add.html
+++ b/src/main/resources/templates/supplement-add.html
@@ -45,6 +45,16 @@
 
         </div>
 
+        <div class="form-group">
+            <div class="label-holder text-white textCol d-flex justify-content-center">
+                <label for="photoUrl" class="h4 mb-2">Photo</label>
+            </div>
+            <input type="text" class="form-control" id="photoUrl"
+                   th:field="*{photoUrl}"/>
+
+            <small th:if="${#fields.hasErrors('photoUrl')}"
+                   th:errors="*{photoUrl}" class="danger">photoUrl error message</small>
+        </div>
 
         <div class="button-holder d-flex justify-content-center">
             <button type="submit" class="btn btn-info  mb-3">Add Supplement</button>
