--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,20 +41,20 @@
     <div class="welcome-sections">
         <section class="tools">
             <img src="/images/multiple-users-silhouette.png" alt="asdas">
-            <h6>Qualified Coaches</h6>
-            <p>Our coach have years of experience in various types of fitness and sports.</p>
+            <h6 th:text="#{index_coaches}">Qualified Coaches</h6>
+            <p th:text="#{index_coaches_paragraph}">Our coach have years of experience in various types of fitness and sports.</p>
         </section>
 
         <section class="tools">
             <img src="/images/thumbs-up-hand-symbol.png" alt="asdasd">
-            <h6>Individual Approach</h6>
-            <p>Every client of GYM has a personalized program of training and nutrition.</p>
+            <h6 th:text="#{index_individual_approach}">Individual Approach</h6>
+            <p th:text="#{index_individual_approach_paragraph}">Every client of GYM has a personalized program of training and nutrition.</p>
         </section>
 
         <section class="tools">
             <img src="/images/dumbbell.png" alt="">
-            <h6>Fitness Equipment</h6>
-            <p>We cooperate with leading fitness equipment suppliers to give you the superior results.</p>
+            <h6 th:text="#{index_equipment}">Fitness Equipment</h6>
+            <p th:text="#{index_equipment_paragraph}">We cooperate with leading fitness equipment suppliers to give you the superior results.</p>
         </section>
     </div>
 
