--- a/src/main/resources/templates/illegal-state-coach-assigned.html
+++ b/src/main/resources/templates/illegal-state-coach-assigned.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>An Error Occurred</h1>
-<p>Exercise is in use! Cannot remove it right now!</p>
+<p>You have already assigned a coach!</p>
 <div class="text-center text-white mt-5">We are sorry! Please navigate to <a th:href="@{/home}">home page</a>...</div>
 </body>
 </html>
