--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -200,18 +200,36 @@ main .button {
     width: 100%;
 }
 
-.coach-sections {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
 .coach-cards {
     flex: 1;
     min-width: 200px;
     margin: 10px;
     text-align: center;
 }
+
+
+.coach-sections {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.coach-card {
+    flex: 1;
+    max-width: 300px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.coach-photo {
+    width: 90%;
+    height: auto;
+    border-radius: 50%;
+}
+
 /* FOOTER */
 
 footer {
