--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,16 +59,17 @@
     </div>
 
     <div class="coach">
-        <h3>Coaches</h3>
+        <h3 th:text="#{our_coaches}">Coaches</h3>
         <div class="divider"></div>
         <div class="coach-sections">
-            <section class="coach-cards">
-                <img src="/images/perkins.jpg" alt="">
-                <h5 class="name">Pepa Perkins</h5>
-                <h6>Fitness</h6>
-                <p>Emily can teach you all peculiarities of fitness and aerobics in a group or individually.</p>
+            <section th:each="coach : ${randomCoaches}" class="coach-card">
+                <img th:src="${coach.photoUrl}" alt="Coach Photo" class="coach-photo">
+                <h5 class="name" th:text="${coach.fullName}">Coach Name</h5>
+                <h6 th:text="${coach.specialty}">Specialty</h6>
+                <p th:text="${coach.bio}">Coach bio</p>
             </section>
-
+    </div>
+            <!--
             <section class="coach-cards">
                 <img src="/images/minela.jpg" alt="">
                 <h5 class="name">Samantha Minela</h5>
@@ -82,7 +83,8 @@
                 <h6>Bodybuilding</h6>
                 <p>Austin is not only our most called-for coach, but also a winner of many championships.</p>
             </section>
-        </div>
+            -->
+
 
     </div>
 </div>
