--- a/src/main/resources/templates/supplement-details.html
+++ b/src/main/resources/templates/supplement-details.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/navbar::head">
     <title>Exercise Preview</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -20,7 +21,8 @@
                                 <h1 class="card-title" th:text="${supplement.name}">Supplement Name</h1>
                                 <p class="card-text" th:text="${supplement.description}">Supplement's description</p>
                                 <p class="card-text"><strong>Calories per serving:</strong> <span th:text="${supplement.caloriesPerServing}">Calories Per Serving</span></p>
-                                <form th:method="delete" th:action="@{/supplement/{id}(id=${supplement.id})}">
+                                <form   sec:authorize="isAuthenticated() and hasRole('ADMIN')"
+                                        th:method="delete" th:action="@{/supplement/{id}(id=${supplement.id})}">
                                     <button type="submit" class="btn btn-danger">Remove</button>
                                 </form>
                             </div>
