--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,9 +15,14 @@
 <header>
     <nav>
         <div class="home">
-            <a href="/home" th:text="#{nav_bar_home}">Fitness</a>
+            <li>
+                <a href="/home" th:text="#{nav_bar_home}">Fitness</a>
+            </li>
+
         </div>
+
         <div class="links">
+
 
             <li sec:authorize="isAuthenticated() and hasRole('TRAINEE')">
                 <a href="/trainee-coaches" th:text="#{nav_bar_coach}">Coach</a>
@@ -43,7 +48,9 @@
             <li sec:authorize="!isAuthenticated()">
                 <a href="/login" th:text="#{nav_bar_login}">Login</a>
             </li>
-
+            <li sec:authorize="isAuthenticated() and hasRole('ADMIN') ">
+                <a href="/admin/all-users" th:text="#{nav_bar_admin_users}">All Users</a>
+            </li>
             <li sec:authorize="!isAuthenticated()">
                 <a href="/register" th:text="#{nav_bar_register}">Register</a>
             </li>
